# microbiome-disease-pipeline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml
configs/: pipeline_config.yaml
src/: __init__.py
src/features/: diversity.py
src/ml/: train.py
src/profiling/: run_kraken2.py  run_metaphlan.py
tests/: test_diversity.py
