[metadata]
name = microbiome-disease-pipeline
version = 0.1.0
author = Juan Andrés Matos Muñoz
author_email = jmatos10@stanford.edu
description = Metagenomic analysis pipeline for microbiome-disease associations with ML prediction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmatos10/microbiome-disease-pipeline
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.11
install_requires =
    pandas>=2.1.0
    numpy>=1.25.0
    scipy>=1.11.0
    scikit-learn>=1.3.0
    pyyaml>=6.0

[options.extras_require]
dev =
    pytest>=7.4.0
    flake8>=6.1.0

[flake8]
max-line-length = 120
ignore = E501,W503
